--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
         <form action="/" method="post">
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
           <input type="submit" class="ghost-button" value="Get Weather">
+          <input name="mood" type="text" class="ghost-input" placeholder="What's your mood"
         </form>
         <% if(weather !== null){ %>
           <p><%= weather %></p>
